Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
       </header>
       <section>
         <h1>
-<a id="hazelnut" class="anchor" href="#hazelnut" aria-hidden="true"><span class="octicon octicon-link"></span></a>hazelnut</h1>
+<a id="-hazelnut" class="anchor" href="#-hazelnut" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+<img src="https://raw.githubusercontent.com/c0ding/hazelnut/master/doc/hazelnut.png" height="85" alt="hazelnut" title="hazelnut"> hazelnut</h1>
 
 <p><a href="https://pypi.python.org/pypi/hazelnut/"><img src="http://img.shields.io/pypi/v/hazelnut.svg" alt="PyPi Version"></a>   <a href="https://pypi.python.org/pypi/hazelnut/"><img src="http://img.shields.io/pypi/dm/hazelnut.svg" alt="Downloads"></a>
 <a href="https://landscape.io/github/c0ding/hazelnut/master"><img src="https://landscape.io/github/c0ding/hazelnut/master/landscape.svg" alt="Code Health"></a></p>
 
-<p>A pythonic library for parsing /proc/meminfo</p>
+<p><strong>hazelnut</strong> is an APACHE licensed library written in Python designed to provide a simple and pythonic way to parse the <em>/proc/meminfo</em> file on LINUX based systems.</p>
 
 <h2>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation:</h2>
@@ -47,6 +48,121 @@
 <p>or install from PyPi</p>
 
 <pre><code>    $ pip install hazelnut
+</code></pre>
+
+<h2>
+<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation:</h2>
+
+<ul>
+<li>Basic use:</li>
+</ul>
+
+<pre><code>&gt;&gt;&gt; from hazelnut import MemInfo
+&gt;&gt;&gt; mem = MemInfo()
+&gt;&gt;&gt; mem
+MemTotal:        8092252 kB
+MemFree:         5444872 kB
+MemAvailable:    7138880 kB
+Buffers:          484724 kB
+Cached:          1299716 kB
+SwapCached:            0 kB
+Active:          1732744 kB
+Inactive:         671312 kB
+Active(anon):     509420 kB
+Inactive(anon):   111312 kB
+Active(file):    1223324 kB
+Inactive(file):   560000 kB
+Unevictable:           0 kB
+Mlocked:               0 kB
+SwapTotal:      16776188 kB
+SwapFree:       16776188 kB
+Dirty:                 0 kB
+Writeback:             0 kB
+AnonPages:        619632 kB
+Mapped:            96216 kB
+Shmem:              1120 kB
+Slab:             184200 kB
+SReclaimable:     159252 kB
+SUnreclaim:        24948 kB
+KernelStack:        3856 kB
+PageTables:         5664 kB
+NFS_Unstable:          0 kB
+Bounce:                0 kB
+WritebackTmp:          0 kB
+CommitLimit:    20822312 kB
+Committed_AS:    1755880 kB
+VmallocTotal:   34359738367 kB
+VmallocUsed:      362896 kB
+VmallocChunk:   34359343324 kB
+HardwareCorrupted:     0 kB
+AnonHugePages:         0 kB
+HugePages_Total:       0
+HugePages_Free:        0
+HugePages_Rsvd:        0
+HugePages_Surp:        0
+Hugepagesize:       2048 kB
+DirectMap4k:       97980 kB
+DirectMap2M:     8187904 kB
+</code></pre>
+
+<ul>
+<li>Return output as dict:</li>
+</ul>
+
+<pre><code>&gt;&gt;&gt; mem.dict()
+{
+    "Inactive:": "671312 kB",
+    "Mlocked:": "0 kB",
+    "HardwareCorrupted:": "0 kB",
+    "Bounce:": "0 kB",
+    "Active:": "1746544 kB",
+    "Cached:": "1299720 kB",
+    "Unevictable:": "0 kB",
+    "SReclaimable:": "159256 kB",
+    "DirectMap2M:": "8187904 kB",
+    "Buffers:": "484736 kB",
+    "Hugepagesize:": "2048 kB",
+    "MemAvailable:": "7126028 kB",
+    "HugePages_Rsvd:": "0",
+    "Inactive(anon):": "111312 kB",
+    "CommitLimit:": "20822312 kB",
+    "SUnreclaim:": "24940 kB",
+    "Inactive(file):": "560000 kB",
+    "SwapCached:": "0 kB",
+    "HugePages_Total:": "0",
+    "Active(file):": "1223340 kB",
+    "Writeback:": "0 kB",
+    "Dirty:": "0 kB",
+    "PageTables:": "5700 kB",
+    "Shmem:": "1120 kB",
+    "MemFree:": "5432004 kB",
+    "Mapped:": "96256 kB",
+    "WritebackTmp:": "0 kB",
+    "Slab:": "184196 kB",
+    "HugePages_Free:": "0",
+    "AnonPages:": "633396 kB",
+    "HugePages_Surp:": "0",
+    "DirectMap4k:": "97980 kB",
+    "Committed_AS:": "1774860 kB",
+    "VmallocUsed:": "362896 kB",
+    "MemTotal:": "8092252 kB",
+    "SwapTotal:": "16776188 kB",
+    "NFS_Unstable:": "0 kB",
+    "VmallocTotal:": "34359738367 kB",
+    "Active(anon):": "523204 kB",
+    "KernelStack:": "3856 kB",
+    "SwapFree:": "16776188 kB",
+    "AnonHugePages:": "0 kB",
+    "VmallocChunk:": "34359343324 kB"
+}
+</code></pre>
+
+<ul>
+<li>Search:</li>
+</ul>
+
+<pre><code>&gt;&gt;&gt; mem.search('Swap')
+['SwapCached:            0 kB\n', 'SwapTotal:      16776188 kB\n', 'SwapFree:       16776188 kB\n']
 </code></pre>
 
 <h2>
