Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ DirectMap2M:     8187904 kB
 </code></pre>
 
 <ul>
-<li>Search:</li>
+<li>Search (is case insensitive):</li>
 </ul>
 
 <pre><code>&gt;&gt;&gt; mem.search('Swap')
