Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hazelnut by c0ding</title>
+    <title>Hazelnut by mrsmn</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -18,13 +18,13 @@
         <h1>Hazelnut</h1>
         <p>A pythonic library to parse /proc/meminfo</p>
 
-        <p class="view"><a href="https://github.com/c0ding/hazelnut">View the Project on GitHub <small>c0ding/hazelnut</small></a></p>
+        <p class="view"><a href="https://github.com/mrsmn/hazelnut">View the Project on GitHub <small>mrsmn/hazelnut</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/c0ding/hazelnut/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/c0ding/hazelnut/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/c0ding/hazelnut">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/mrsmn/hazelnut/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/mrsmn/hazelnut/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/mrsmn/hazelnut">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -204,7 +204,7 @@ DOGE: DRBkryyau5CMxpBzVmrBAjK6dVdMZSBsuS
 </code></pre>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/c0ding">c0ding</a></p>
+        <p>This project is maintained by <a href="https://github.com/mrsmn">mrsmn</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
